fix forms in modals on ios

--- a/assets/style/app/components/_modal.scss
+++ b/assets/style/app/components/_modal.scss
@@ -16,6 +16,11 @@ html.touch {
   }
 }
 
+html.modal-active.ios-modal-fix body {
+  position: fixed;
+  width: 100%;
+}
+
 .modal {
   bottom: 0;
   left: 0;
